# gfisher_coco_conversion

./: .gitignore  pyproject.toml  requirements.txt
gfisher_coco_conversion/: gcs_convert.py  utils.py  viame_images_to_kwcoco.py  viame_to_coco.py  viame_to_kwcoco.py
notebooks/: Species List.csv  completed_videos.csv  completed_videos.csv.bkp  convert_videos.ipynb  fathomnet_conversion.ipynb  merge_results.ipynb  remap_categories.ipynb  worms_lookups.ipynb  worms_map.csv
