[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gfisher_coco_conversion"
version = "0.1.0"
description = "tools for converting gfisher data formats"
authors = [
    { name = "CScott Brown" },
]
dependencies = [
  "viame2coco",
  "pycocowriter",
  "pycocotools"
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]"
]
